--- a/playground/vite-vue/package.json
+++ b/playground/vite-vue/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "postinstall": "node ./checkEnv.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.37"
