--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-package-lint",
-  "version": "1.0.9",
+  "version": "1.1.2",
   "type": "module",
   "bin": {
     "npm-package-lint": "bin/index.js"
@@ -30,5 +30,8 @@
   },
   "engines": {
     "node": ">=14.18.0"
+  },
+  "devDependencies! ": {
+    "semver": "latest"
   }
 }
